--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-image: url(../public/app-background.svg); 
+  background-color:var(--color-grey); 
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
