--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@
   padding: 0;
 }
 body {
-  --color-main: hsl(270, 72%, 33%);
+  --color-primary: hsl(270, 72%, 33%);
   --color-secondary: hsl(45, 100%, 61%);
   --color-tertiary: hsl(28, 100%, 58%);
   --color-accent: hsl(0, 100%, 64%);
-  --color-light: hsl(57, 27%, 84%);
-  --color-dark: hsl(220, 13%, 18%);
+  --color-grey: hsl(0, 0%, 90%);
+  --color-offblack: hsl(0, 0%, 20%);
 
   padding:0;
   background-color:aliceblue;
