--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,9 +3,11 @@
     top: 0;
     width: 100%;
     height: 60px;
+    background-color:white;
+    box-shadow: 5px 2px 5px #888888;
 }
 
-.list {
+.list{
     list-style-type: none;
     height: 100%;
     display: flex;
@@ -14,14 +16,32 @@
     position: relative;
 }
 
-.items {
-    margin-right: 20px;
+.items,
+.login {
+    margin: 0 10px;
     font-size: 1.1rem;
-    text-transform: uppercase;
     color: var(--color-offblack);
     cursor: pointer;
+    text-decoration: none;
 }
 
+.login {   
+    display:inline-block; 
+    padding:7px 45px;
+    background: linear-gradient(to right, var(--color-secondary), var(--color-tertiary));
+    border-radius: 15px;
+    margin-right: 5vw;
+    margin-left:6vw;
+    transition:all 0.3s ease-in-out;
+    letter-spacing: 2px;
+}
+.login:hover {
+    text-shadow: 0px 0px .5px var(--color-offwhite);
+    box-shadow: 2px 2px 5px #888888;
+}
+.login:after {
+    width:0px;
+}
 .hambergerBtn {
     display: none;
     position: absolute;
@@ -39,7 +59,7 @@
 .title {
     font-size: 1.5rem;
     position:absolute;
-    left:5vw;
+    left:10vw;
     top:50%;
     height:50%;
     transform:translate(0,-50%);
