--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,6 +5,7 @@
     height: 60px;
     background-color:white;
     box-shadow: 5px 2px 5px #888888;
+    z-index: 1000;
 }
 
 .list{
@@ -23,6 +24,11 @@
     color: var(--color-offblack);
     cursor: pointer;
     text-decoration: none;
+}
+li.items:hover {
+    padding-top:30px;
+    transition: padding 0.3s, border .1s.2s; 
+    border-bottom: 4px solid var(--color-primary);
 }
 
 .login {   
@@ -67,28 +73,28 @@
     cursor: pointer;
 }
 
-@media screen and (max-width: 500px) {
+
+@media screen and (max-width: 1060px) {
     .list {
         flex-direction: column;
         height: auto;
-        top:50%
+        top:68px;
+        background-color:white;
+        border-radius:20px;
+        width:90vw;
+        left:5vw;
     }
-
-    .items:nth-child(1) {
-        margin-top: 50px;
-        border-top: 3px solid black;
-    }
-
-    .items {
-        width: 100%;
+    .items,
+    .login {
+        width: 70vw;
+        max-width: 500px;
         text-align: center;
         margin-right: 0px;
-        padding: 20px 0;
-        border-bottom: black solid 3px;
+        margin:10px auto;
+        z-index:100;
+        min-width:0;
     }
-
     .hambergerBtn {
         display: block;
     }
-
 }
