--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -2,5 +2,6 @@
     min-height: calc(100vh - 60px);
     height:2000px;
     margin-top:60px;
-    background-image: linear-gradient(to top, var(--color-primary),1%, var(--color-grey));
+    background-color:white;
+    /* background-image: linear-gradient(to top, var(--color-secondary),10%,transparent,white); */
 }   
