--- a/src/components/IconBar/IconBar.module.css
+++ b/src/components/IconBar/IconBar.module.css
@@ -18,4 +18,25 @@
     width:100%;
     height:100%;
     border-radius: 10px;
+    margin-right: 10px;
+}
+
+@media screen and (max-width: 1000px) {
+    .container {
+        width:100vw;
+        min-height:0px;
+        min-width:0;
+    }
+    .list {
+        width:100vw;
+        height:auto;
+        min-height:0px;
+        min-width:0;
+    }
+    .list img {
+        width:18vw;
+        height:auto;
+        margin:0;
+        padding:0;
+    }
 }
