--- a/src/pages/Landing/About.module.css
+++ b/src/pages/Landing/About.module.css
@@ -14,7 +14,12 @@
 }
 .section:nth-child(2) {
     padding-top:100px;
-    background-color: #fff1f1;
+    background-color: #fdd4d4;
+    padding-bottom:100px;
+}
+.section:nth-child(3) {
+    background-color: #fdd4d4;
+    padding-bottom:100px;
 }
 
 .sectionTopWave {
@@ -35,11 +40,11 @@
 }
 /* Image css */
 #displayOne {
-    width:350px;
+    width:400px;
     border: 2px solid var(--color-grey);
     border-radius: 10px;
     margin-left:30%;
-    margin-top:50px;
+    margin-top:-10px;
 }
 
 /* Button css */
