--- a/src/pages/Landing/About.module.css
+++ b/src/pages/Landing/About.module.css
@@ -28,6 +28,12 @@
     width:100vw;
     z-index: -1;
 }
+.sectionBottomWave {
+    position: absolute;
+    top: -20vw;
+    width: 100vw;
+    z-index: 0;
+}
 /* Container code */
 .containerHalf,
 .containerHalfImg{
@@ -52,7 +58,8 @@
     display:inline-block;
     text-align: center;
     text-decoration: none;
-    width:175px;
+    padding: 0px 20px;
+    min-width:175px;
     height:50px;
     margin:20px 20px 3px 0px;
     background-color: transparent;
@@ -71,7 +78,7 @@ a.button {
     color: var(--color-grey);
     cursor:pointer; 
     box-shadow: 2px 2px 5px #888888;
-    border:none;
+    border-color:transparent;
     opacity:90%;
 }
 /* Header Css */
