--- a/src/components/UnderConstruction/UnderConstruction.module.css
+++ b/src/components/UnderConstruction/UnderConstruction.module.css
@@ -16,7 +16,7 @@
     background-color: #f1f1f1;
     padding: 20px;
     z-index: 1001;
-    width:30vw;
+    width:40vw;
     text-align: center;
     border-radius: 20px;
 }
@@ -38,3 +38,24 @@
     color: #555;
     padding:30px;
 }
+
+@media screen and (max-width: 1000px) {
+    .container {
+        width:90vw;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container h1 {
+            font-size: 20px;
+        }
+
+        .container p {
+            font-size: 15px;
+        }
+
+        .container h2 {
+            font-size: 15px;
+        }
+}
+    
