--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -19,6 +19,7 @@
 
 .items,
 .login {
+    display:inline-block;
     margin: 0 10px;
     font-size: 1.1rem;
     color: var(--color-offblack);
@@ -26,7 +27,8 @@
     text-decoration: none;
 }
 li.items:hover {
-    padding-top:30px;
+    padding-top:20px;
+    padding-bottom:10px;
     transition: padding 0.3s, border .1s.2s; 
     border-bottom: 4px solid var(--color-primary);
 }
