--- a/src/components/IconBar/IconBar.module.css
+++ b/src/components/IconBar/IconBar.module.css
@@ -5,6 +5,7 @@
 .list {
     list-style: none;
     height:70px;
+    margin-top:10px;
     display: flex;
     justify-content: space-between;
     width:80%;
