--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  --color-primary: hsl(270, 72%, 33%);
+  --color-primary: #541891;
   --color-secondary: hsl(45, 100%, 61%);
   --color-tertiary: hsl(28, 100%, 58%);
   --color-accent: hsl(0, 100%, 64%);
