--- a/src/pages/Landing/Pricing.module.css
+++ b/src/pages/Landing/Pricing.module.css
@@ -1,16 +1,32 @@
+.container {
+    background-image: url("./../../../public/images/app-background.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.5);
+}
+
+.header {   
+    width:80%;
+    margin:0px auto; 
+    padding: 10px;
+}
 .header h1 {
     font-size: 2.5em;
     font-weight: 700;
-    margin-top:100px;
+    margin-top:20px;
     text-align: center;
-    color:var(--color-primary);
+    color: transparent;
+    background: linear-gradient(to right, hsl(270, 100%, 60%), 30%, var(--color-primary));
+    background-clip: text;
 }
 .header p {
     font-size: 1.2em;
     font-weight: 300;
     margin-top: 20px;
     text-align: center;
-    color:rgb(101, 101, 101);
+    color:var(--color-primary);
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .pricing {
@@ -30,15 +46,71 @@
     border: 2px solid var(--color-primary);
     text-align:center;
     box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+    color: rgb(101, 101, 101);
+    display:flex;
+    flex-direction:column;
+    border-radius:6px;
+    background:white;
+    /* background:linear-gradient(-135deg, white, #fdd4d4);  */
+    /* justify-content:space-between; */
 }
 .card:nth-child(2) {
     padding:45px 20px; 
     margin-top:-5px;
 }
+.card p {
+    font-family: 'Times New Roman', Times, serif;
+}
+.card h1 {
+    font-size:2.3rem;
+    background: linear-gradient(to right, hsl(270, 100%, 60%), var(--color-primary));
+    background-clip: text;
+    color:transparent;
+    margin-bottom:10px;
+}
+.card h2 { 
+    margin-top: auto;
+    color:var(--color-primary);
+    display:inline;
+    font-size:2.5rem;
+}
+.card .miniText {
+    margin-top:-10px;
+    font-size:.7rem;
+    /* color:#fdd4d4    */
+}
+
+.card h3 {
+    font-size:1.2rem;
+    margin-top:auto;
+    color:var(--color-primary);
+}
 .card ul {
     text-align:left;
     width:fit-content;
     margin:0 auto;
+    font-family: 'Times New Roman', Times, serif;
+}
+.card li {
+    font-size:1.2rem;
+    margin-top:20px;
+    line-height:.5rem;
+    /* color:var(--color-primary); */
+}
+.card a {
+    display:block;
+    color:white;
+    background: linear-gradient(to right, hsl(270, 100%, 60%),80%, var(--color-primary));
+    text-decoration:none;
+    width:100%;
+    font-size:20px;
+    padding: .5em 0;
+    margin-top:auto;
+    box-shadow: 3px 3px 3px rgba(98, 98, 98, 0.1);
+    transition: transform .2s ease-in-out;
+}
+.card a:hover {
+    transform:scale(1.07)
 }
 @media (max-width: 1100px) {
     .pricing{
@@ -47,7 +119,7 @@
         width:90%;
     }
     .card {
-        width:100%;
+        width:90%;
         max-width:500px;
     }
 }
