--- a/src/pages/Landing/Pricing.module.css
+++ b/src/pages/Landing/Pricing.module.css
@@ -11,7 +11,8 @@
     margin:0px auto; 
     padding: 10px;
 }
-.header h1 {
+.header h1,
+.features h1 {
     font-size: 2.5em;
     font-weight: 700;
     margin-top:20px;
@@ -111,6 +112,20 @@
 }
 .card a:hover {
     transform:scale(1.07)
+}
+.microText {
+    border-bottom:2px solid #fdd4d4;
+    width:80vw;
+    margin:20px auto;
+
+}
+.microText p {
+    font-size:1.5rem;
+    text-align:center;
+}
+.microText p a { 
+    color:hsl(270, 100%, 60%);
+    text-decoration: none;
 }
 @media (max-width: 1100px) {
     .pricing{
