--- a/src/pages/Landing/Pricing.module.css
+++ b/src/pages/Landing/Pricing.module.css
@@ -127,6 +127,29 @@
     color:hsl(270, 100%, 60%);
     text-decoration: none;
 }
+.table {
+    width:80%;
+    margin:0 auto;
+    /* padding:50px 0; */
+    text-align:center;
+    border-left: 4px solid var(--color-primary);
+    /* padding-right:-20px; */
+}
+.table th {
+    font-size:1.2rem;
+    font-weight:700;
+    color:hsl(270, 100%, 60%);
+    background-color:white;
+}
+.table td {
+    padding:20px;
+    font-size:1.2rem;
+    font-weight:300;
+    color: rgb(101, 101, 101);
+    margin:0;
+    background:white;
+
+}
 @media (max-width: 1100px) {
     .pricing{
         flex-direction: column;
@@ -136,5 +159,8 @@
     .card {
         width:90%;
         max-width:500px;
+    }
+    .features {
+        display:none;
     }
 }
