--- a/src/pages/Landing/Resources.module.css
+++ b/src/pages/Landing/Resources.module.css
@@ -10,10 +10,10 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    max-width:100vw;
 }
 .contactForum {
     width: 30vw;
-    min-width:400px;
     text-align: center;
     padding:2.5vw;
     text-align: center;
@@ -56,4 +56,15 @@
 .mailImg {
     width: 30%;
     height:min-content;
+}
+
+@media screen and (max-width: 600px) {
+    .contactForum {
+        display:block;
+        width: 90vw;
+        margin: 0;
+    }
+    .mailImg {
+        width: 100%;
+    }
 }
