--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,7 +7,15 @@
     box-shadow: 5px 2px 5px #888888;
     z-index: 1000;
 }
-
+.backdrop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 0;
+    display:none;
+}
 .list{
     list-style-type: none;
     height: 100%;
@@ -99,6 +107,9 @@ li.items:hover {
         min-width:0;
     }
     .hambergerBtn {
+        display: block;
+    }
+    .backdrop {
         display: block;
     }
 }
